bug: 고객 카드 계좌 사용내역 조회+프론트 수정

--- a/src/main/resources/templates/account_new.html
+++ b/src/main/resources/templates/account_new.html
@@ -176,8 +176,8 @@ tr:hover {
 
       <label>계좌 종류 :</label>
       <select id="accountType">
-        <option value="적금">입출금</option>
-        <option value="입출금">적금</option>
+        <option value="입출금">입출금</option>
+        <option value="적금">적금</option>
       </select>
 
       <button type="button" onclick="submitAccountForm()">계좌 생성</button>
